# polymarket-bot

./: .dockerignore  .env.example  .gitignore  BOT.md  CHANGELOG.md  Dockerfile  README.md  api.py  config.py  db.py  detector.py  main.py  notifier.py  pyproject.toml
bot/: __main__.py  agent.py  agent_tools.py  alerting.py  api.py  app.py  config.py  detector.py  jobs.py  keyboards.py  notifier.py  state.py
bot/db/: __init__.py  alerts.py  core.py  engine.py  models.py  snapshots.py  subscribers.py
bot/handlers/: admin.py  menu.py  preferences.py  settings_ui.py  unsubscribe.py  user.py
deploy/: logrotate.conf  polymarket-bot-local.service  polymarket-bot.service  setup.sh
tests/: conftest.py  test_api.py  test_db.py  test_detector.py  test_main.py  test_notifier.py
