[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "requests>=2.33.1",
]

[project.scripts]
polymarket-bot = "bot.app:main"

[tool.uv]
package = true
